examples/datalog/25_unified_prefix/04_session_vs_persistent.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_sess_vs_pers
Knowledge graph 'test_sess_vs_pers' created.
Switched to knowledge graph: test_sess_vs_pers
> .kg use test_sess_vs_pers
Switched to knowledge graph: test_sess_vs_pers
> +data[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'data'.
> +persistent_doubled(X, Y) :- data(X), Y = X * 2.
Script error: Failed to register rule: Unsafe rule 'persistent_doubled': Head variable(s) Y not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
